@@ -128,7 +128,7 @@
     </layout>
    </item>
    <item>
-    <widget class="QGroupBox" name="groupBox">
+    <widget class="QGroupBox" name="filenamesGroupBox">
      <property name="title">
       <string>Filenames</string>
      </property>
